# minecraft-LowLvReplica

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindGLFW3.cmake
include/: application.h  camera.h  player.h  renderer.h  shader.h  world.h
include/core/: application.h  renderer.h
include/graphics/: camera.h  shader.h
include/player/: camera.h
include/shader/: shader.h
include/world/: block.h  world.h
include_old/core/: application.h  renderer.h
include_old/player/: camera.h
include_old/shader/: shader.h
include_old/world/: block.h  world.h
shaders/: fragmentShader.fs  vertexShader.vs
src/: application.cpp  camera.cpp  main.cpp  player.cpp  renderer.cpp  world.cpp
src/core/: application.cpp  renderer.cpp
src/graphics/: camera.cpp  shader.cpp
src/world/: block.cpp  world.cpp
src_old/core/: application.cpp  renderer.cpp
src_old/world/: block.cpp  world.cpp
